// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema for fullyEligible 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {
    "custodyLevelIsNotMax": null,
    "notHasInitialClassificationInStatePrisonCustody": null,
  },
  "externalId": "RES003",
  "formInformation": {
    "activeRecommendations": [
      {
        "Recommendation": "do this thing",
      },
    ],
    "hasIncompatibles": true,
    "incompatibleArray": [
      {
        "incompatibleOffenderId": "123",
        "incompatibleType": "magentism",
      },
      {
        "incompatibleOffenderId": "456",
        "incompatibleType": "psychic",
      },
    ],
    "isServingLife": "false",
    "q1Notes": {
      "listPriorNonTdocConvictions60Months": "some offense on 12/1/2022",
      "listPriorViolentTdocConvictions60Months": "some other offense on 8/22/2021",
    },
    "q2Notes": "a third offense",
    "q3Notes": "ABC (Class Q) on 1/8/2023",
    "q3Score": -3,
    "q4Notes": "",
    "q4Score": 2,
    "q5Notes": "",
    "q5Score": -1,
    "q6Score": 0,
    "q7Notes": "",
    "q7Score": 0,
    "statusAtHearingSeg": "GEN",
    "trusteeHas10YearsOrLessRemaining": "true",
    "trusteeNoAssaultiveDisciplinaryWithSeriousInjury": "true",
    "trusteeNoEscapeFromLowTrusteePast5Years": "false",
    "trusteeNoEscapeFromMediumCloseMaxPast10Years": "true",
    "trusteeNoViolentFelonyConvictionPast5YearsIncarceration": "true",
    "trusteeNotConvictedOfFirstDegreeMurder": "true",
    "trusteeNotScoredHighForViolence": "false",
    "trusteeNotServingForSexualOffense": "true",
  },
  "ineligibleCriteria": {},
  "isAlmostEligible": false,
  "isEligible": true,
  "metadata": {},
  "stateCode": "US_TN",
}
`;

exports[`schema for ineligible 1`] = `
{
  "caseNotes": {},
  "eligibleCriteria": {},
  "externalId": "RES003",
  "formInformation": {
    "activeRecommendations": [],
    "hasIncompatibles": false,
    "incompatibleArray": [],
    "isServingLife": "false",
    "q1Notes": {
      "listPriorNonTdocConvictions60Months": "some offense on 12/1/2022",
      "listPriorViolentTdocConvictions60Months": "some other offense on 8/22/2021",
    },
    "q2Notes": "a third offense, a fourth offense",
    "q3Notes": "ABC (Class Q) on 1/8/2023, XYZ (Class R) on 2/11/2022",
    "q3Score": -3,
    "q4Notes": "DEF (Class Q) on 1/8/2023",
    "q4Score": 2,
    "q5Notes": "HIJ (Class Q) on 1/8/2023",
    "q5Score": -1,
    "q6Score": 0,
    "q7Notes": "Completed TXI (Taxi Maintenance) on 2/2/2023",
    "q7Score": -2,
    "statusAtHearingSeg": "GEN",
    "trusteeHas10YearsOrLessRemaining": "true",
    "trusteeNoAssaultiveDisciplinaryWithSeriousInjury": "true",
    "trusteeNoEscapeFromLowTrusteePast5Years": "true",
    "trusteeNoEscapeFromMediumCloseMaxPast10Years": "true",
    "trusteeNoViolentFelonyConvictionPast5YearsIncarceration": "true",
    "trusteeNotConvictedOfFirstDegreeMurder": "true",
    "trusteeNotScoredHighForViolence": "true",
    "trusteeNotServingForSexualOffense": "true",
  },
  "ineligibleCriteria": {
    "custodyLevelIsNotMax": {
      "custodyLevel": "Maximum",
    },
    "notHasInitialClassificationInStatePrisonCustody": {
      "initialAssessmentDate": "2024-12-28",
      "initialClassificationDate": "2025-01-01",
      "initialClassificationDecisionDate": "2025-01-01",
    },
  },
  "isAlmostEligible": false,
  "isEligible": false,
  "metadata": {},
  "stateCode": "US_TN",
}
`;
